@@ -1,3 +1,8 @@
+2004-03-11  Pascal Scheffers  <pascal@scheffers.net>
+	
+	* bridge.tcl: Added ~/.ircbridge sourcing
+	* chat.tcl: Added killpassword safeguard and chatpassword
+	
 2003-10-10  Pascal Scheffers  <pascal@scheffers.net>
 	
 	* bridge.tcl: slight improvement to onlineusers tracking
